Chrome / Sams Message overflow bug

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -34,6 +34,7 @@ html {
     align-self: stretch;
     height: 100%;
     width: 100%;
+    padding: 0 1vh;
 }
 
 #home {
